--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "joi": "^17.3.0",
     "underscore": "^1.11.0",
     "uuid": "^3.4.0"
   },
