--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "joi": "^17.3.0",
+    "morgan": "^1.10.0",
     "underscore": "^1.11.0",
-    "uuid": "^3.4.0"
+    "uuid": "^3.4.0",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
