--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   "author": "Victor Zevallos",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "joi": "^17.3.0",
     "morgan": "^1.10.0",
+    "passport": "^0.4.1",
+    "passport-http": "^0.3.0",
     "underscore": "^1.11.0",
     "uuid": "^3.4.0",
     "winston": "^3.3.3"
