--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "morgan": "^1.10.0",
     "passport": "^0.4.1",
     "passport-http": "^0.3.0",
+    "passport-jwt": "^4.0.0",
     "underscore": "^1.11.0",
     "uuid": "^3.4.0",
     "winston": "^3.3.3"
