--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "corotos-api",
+  "name": "market-api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -16,6 +16,7 @@
     "express": "^4.17.1",
     "joi": "^17.3.0",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.10.14",
     "morgan": "^1.10.0",
     "passport": "^0.4.1",
     "passport-http": "^0.3.0",
