--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.js",
-    "prod": "NODE_ENV=prod node index.js"
+    "prod": "NODE_ENV=prod node index.js",
+    "test": "jest --forceExit"
   },
   "keywords": [],
   "author": "Victor Zevallos",
@@ -26,6 +27,8 @@
     "winston": "^3.3.3"
   },
   "devDependencies": {
-    "nodemon": "^2.0.6"
+    "jest": "^26.0.1",
+    "nodemon": "^2.0.6",
+    "supertest": "^4.0.2"
   }
 }
